changes directory of favicon

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge,chrome=1">
         <title>Raad de RGB Color | Train je vaardigheden als webdeveloper</title>
         
         <link rel="stylesheet" href="css/style.css">
 
         <!-- Favicon -->
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="manifest" href="/site.webmanifest">
+        <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+        <link rel="manifest" href="/favicon/site.webmanifest">
         <meta name="apple-mobile-web-app-title" content="RGB Kleurenspel">
         <meta name="application-name" content="RGB Kleurenspel">
         <meta name="msapplication-TileColor" content="#da532c">
