updates meta description for SEO

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge,chrome=1">
-        <title>Raad de RGB Color | Train je vaardigheden als webdeveloper</title>
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta name="description" content="Spelenderwijs RGB-kleuren leren en je vaardigheden op het gebied van HTML en CSS als webdeveloper verbeteren.">
+        <title>RGB Kleurenspel, spelenderwijs RGB-kleuren leren</title>
         
         <link rel="stylesheet" href="css/style.css">
 
