updates title for better SEO

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="description" content="Spelenderwijs RGB-kleuren leren en je vaardigheden op het gebied van HTML en CSS als webdeveloper verbeteren.">
-        <title>RGB Kleurenspel, spelenderwijs RGB-kleuren leren</title>
+        <title>Spelenderwijs RGB-kleuren leren met het RGB Kleurenspel</title>
         
         <link rel="stylesheet" href="css/style.css">
 
